--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "x509-cert-check",
   "version": "0.0.1",
   "description": "check x509 certificat",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.16.2",
     "socket.io": "^2.0.4",
