restructure framework dependencies.
Bootstrap and jQuery are now loaded with and from nodejs so this site will work without internet connection. Also extracted css and js code from html files into the assets folder for reuse on other pages.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "check x509 certificat",
   "dependencies": {
     "express": "^4.16.2",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
     "socket.io": "^2.0.4",
     "x509": "^0.3.3"
   }
